syntax="proto3";


package ems;
option java_package = "com.grpc";

message Employee{
  int64 employee_id = 1;
  string name = 2;
  string email = 3;
  string address = 4;
  string phone = 5;
}

service EmployeeService {
  rpc AddEmployee (Employee) returns (Employee);
  rpc GetEmployee (EmployeeRequest) returns (Employee);
  rpc GetAllEmployees (EmptyRequest) returns (stream EmployeeResponse);
  rpc DeleteEmployee (EmployeeRequest) returns (EmptyResponse);
  rpc UpdateEmployee (EmployeeRequest) returns (Employee);
}



message EmployeeResponse {
  repeated Employee employees = 1;
}

message EmployeeRequest {
  int64 employee_id = 1;
}

message EmptyRequest {}
message EmptyResponse {}
